--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "dependencies": {
+    "browserify": "^14.3.0",
+    "es6-promise": "^4.1.0",
+    "esprima": "^3.1.3",
+    "gulp": "^3.9.1",
     "htmlparser2": "^3.9.1"
   },
   "devDependencies": {},
