--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "es6-promise": "^4.1.0",
     "esprima": "^3.1.3",
     "gulp": "^3.9.1",
-    "htmlparser2": "^3.9.1"
+    "htmlparser2": "^3.9.1",
+    "postcss": "^5.2.17",
+    "postcss-selector-parser": "^2.2.3"
   },
   "devDependencies": {},
   "scripts": {
